# quadrotor

./: .gitignore  BOM.xlsx  Build-Details.md  CMakeLists.txt  CMakeLists.txt~  Cost.md  Deployment-Instructions.md  Development-Instructions.md  Development.md  Difficulties.md  Docker.md  Dynamics.md  Initial-Proposal.md  LICENSE  Measurement.md  Organization.md  Project-Report.md  ProjectProposalAMR.docx  Quadrotor-BOM.md  README.md  Search-Algorithm.md  Software.md  Testing.md  Vagrantfile  index.md  package.xml~  ~$BOM.xlsx
_includes/: youtubeDemoVideo.html
design/: BOM.xlsx
ece595project/: CMakeLists.txt  CMakeLists.txt~  package.xml~
ece595project/launch/: swarm_empty_world.launch  swarm_empty_world.launch~
ece595project/src/: MasterHand.cpp~  QuadBrain.cpp  QuadBrain.cpp~
images/ROS/: Dockerfile
images/gazebo/: Dockerfile
images/hostmachine/: Vagrantfile
images/roscore/: Dockerfile
images/turtlebot/: Dockerfile  docker-compose.yml
launch/: swarm_empty_world.launch  swarm_empty_world.launch~
msg/: SwarmStartCommand.cpp~  movement_status.msg  swarm_start.msg  swarm_start.msg~  uav_status.msg  uav_status.msg~
src/: MasterHand.cpp  MasterHand.cpp~  MovementManager.cpp  MovementManager.cpp~  PathPlanner.cpp~  QuadBrain.cpp~  SwarmCore.cpp~  SwarmStartCommand.cpp  SwarmStartCommand.cpp~
srv/: init_sine_path.srv  init_sine_path.srv~  next_position.srv~  set_position.srv  set_position.srv~  start_sine_path.srv
